# 6ABOS

./: .gitignore  .zenodo.json  CITATION.cff  HISTORY.rst  LICENSE  README.md  README_PYPI.md  environment.yml  pyproject.toml  requirements.txt  run_sixabos.py  setup.py
data/srf/: .gitkeep
docs/: github-recovery-codes.txt
notebooks/: .gitkeep
notebooks/EnMAP/: Untitled.ipynb
src/: .gitkeep
src/EnMAP/: 6ABOS_EnMAP_AC_v1.2_Dic_2025.py
src/sixabos/: 6ABOS_EnMAP_AC_v1.2_Dic_2025.py  __init__.py  atmospheric.py  config.py  core.py  main.py  utils.py
tests/: .gitkeep
