[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sixabos"
version = "1.0.0"
authors = [
  { name="Gabriel Caballero", email="your.email@uv.es" },
]
description = "6S-based Atmospheric Background Offset Subtraction for EnMAP"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.20.3",
    "pandas>=1.3.4",
    "matplotlib>=3.4.3",
    "scipy>=1.7.1",
    "Py6S>=1.9.1",
    "earthengine-api",
    "xmltodict",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/6ABOS"
"Bug Tracker" = "https://github.com/yourusername/6ABOS/issues"

[project.scripts]
sixabos = "sixabos.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sixabos = ["*.txt", "*.xml"]
