# -*- coding: utf-8 -*-
# 6ABOS: 6S-based Atmospheric Background Offset Subtraction for Atmospheric Correction
# Copyright (C) 2026 Gabriel Caballero (University of Valencia)
#
# This program is free software: you can redistribute it and/or modify it under 
# the terms of the GNU General Public License as published by the Free Software 
# Foundation, either version 3 of the License, or (at your option) any later version.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sixabos"
version = "1.0.0"
authors = [
  { name="Gabriel Caballero", email="gabriel.caballero@uv.es" },
]
description = "6S-based Atmospheric Background Offset Subtraction for EnMAP"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.20.3",
    "pandas>=1.3.4",
    "matplotlib>=3.4.3",
    "scipy>=1.7.1",
    "Py6S>=1.9.1",
    "earthengine-api",
    "xmltodict",
]

[project.urls]
"Homepage" = "https://github.com/PhD-Gabriel-Caballero/6ABOS"
"Bug Tracker" = "https://github.com/PhD-Gabriel-Caballero/6ABOS/issues"

[project.scripts]
sixabos = "sixabos.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sixabos = ["*.txt", "*.xml"]
